--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,6 @@
   "name": "expense-tracker-backend",
   "version": "1.0.0",
   "main": "server.js",
-  
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -13,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
